--- a/src/assets/styles/_Reset.scss
+++ b/src/assets/styles/_Reset.scss
@@ -10,10 +10,10 @@
 	box-sizing: border-box;
 }
 
-:focus,
-:active {
-	outline: none;
-}
+// :focus,
+// :active {
+// 	outline: none;
+// }
 
 a:focus,
 a:active {
