--- a/src/assets/styles/_Variables.scss
+++ b/src/assets/styles/_Variables.scss
@@ -16,7 +16,7 @@ $MTSUltraExpanded: 'MTS UltraExpanded';
 
 // VK Sans Display
 
-$VkSans: 'VK Sans Display';
+$ui-font-secondary: 'VK Sans Display'; // ui-font-secondary
 
 // Border Radius ———————————————————————————————————————————————— //
 
