--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,10 +1,10 @@
 @import 'Variables', 'Reset', 'Fonts';
 
 :root {
-	font-family: $VkSans, $MTSUltraExpanded, $MTSExpanded, $MTSWide, -apple-system,
-		BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-		sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-		'Noto Color Emoji', Arial, Helvetica, sans-serif;
+	font-family: $ui-font-secondary, $MTSUltraExpanded, $MTSExpanded, $MTSWide,
+		-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue',
+		Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+		'Segoe UI Symbol', 'Noto Color Emoji', Arial, Helvetica, sans-serif;
 
 	font-size: 20px;
 	font-weight: normal;
@@ -57,8 +57,8 @@ body,
 div,
 nav {
 	&::-webkit-scrollbar {
-		width: 6px;
-		height: 6px;
+		width: 4px;
+		height: 4px;
 		background: transparent;
 	}
 
@@ -67,11 +67,11 @@ nav {
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background-color: $Background;
+		background-color: darken($Background, 12%);
 		border-radius: $ui-rounded--8;
 	}
 
 	&::-webkit-scrollbar-thumb:hover {
-		background-color: lighten($Background, 6%);
+		background-color: darken($Background, 24%);
 	}
 }
