--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -10,6 +10,7 @@
 .main {
 	@include ui-flex-container(flex, $flow: inherit);
 
-	padding: clamp(44px, 12dvh, 120px) 0;
-	gap: clamp(44px, 10dvh, 88px);
+	padding-top: $ui-step * 50;
+	padding-bottom: $ui-step * 18;
+	gap: $ui-step * 18;
 }
