--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -8,7 +8,7 @@
 	padding: $ui-step * 2;
 
 	.container {
-		@include ui-size-control(100%, 104px);
+		@include ui-size-control(100%, clamp(92px, 8vmax, 104px));
 		@include ui-flex-container(flex, space-between, center);
 
 		overflow: hidden;
@@ -16,7 +16,7 @@
 		background: $HeaderAlpha;
 		backdrop-filter: blur(32px);
 		outline: 1px solid $Separator;
-		padding: 0 $ui-step * 9;
+		padding: 0 clamp($ui-step * 5, 3vmax, $ui-step * 9);
 		gap: $ui-spacing;
 
 		.header-part {
