--- a/src/components/ui/blocks/Spinner/Spinner.module.scss
+++ b/src/components/ui/blocks/Spinner/Spinner.module.scss
@@ -1,21 +1,9 @@
 @import 'assets/styles/variables';
 
 .root {
-	width: max-content;
+	@include ui-size-control(max-content);
 
 	.wrapper {
-		animation: spinner;
-		animation-duration: 0.72s;
-		animation-iteration-count: infinite;
-		animation-timing-function: linear;
-	}
-}
-
-@keyframes spinner {
-	0% {
-		transform: rotate(0deg);
-	}
-	100% {
-		transform: rotate(360deg);
+		@include anim-spinner;
 	}
 }
