--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,6 +1,52 @@
 @import 'Variables', 'Reset', 'Fonts';
 
 :root {
+	--background: hsl(241, 10%, 96%);
+	--background-alpha: hsl(241, 44%, 20%, 5%);
+	--field-background: hsl(0, 0%, 100%);
+
+	--overlay: hsl(241, 10%, 10%, 72%);
+
+	--header-alpha: hsl(0, 0%, 100%, 64%);
+
+	--button-secondary: hsl(241, 44%, 20%, 5%);
+	--button-secondary-hover: hsl(241, 44%, 20%, 10%);
+	--button-contrast: hsl(241, 10%, 10%);
+	--button-contrast-hover: hsl(241, 10%, 16%);
+
+	--separator: hsl(241, 10%, 88%);
+	--separator-alpha: hsl(241, 44%, 20%, 15%);
+
+	--text-primary: hsl(241, 10%, 10%);
+	--text-secondary: hsl(241, 10%, 64%);
+	--text-contrast: hsl(0, 0%, 100%);
+	--text-contrast-themed: hsl(0, 0%, 100%);
+}
+
+[data-theme='dark'] {
+	--background: hsl(241, 10%, 10%);
+	--background-alpha: hsl(241, 10%, 1%, 30%);
+	--field-background: hsl(241, 10%, 14%);
+
+	--overlay: hsl(241, 10%, 10%, 72%);
+
+	--header-alpha: hsl(241, 10%, 14%, 64%);
+
+	--button-secondary: hsl(241, 10%, 96%, 10%);
+	--button-secondary-hover: hsl(241, 10%, 96%, 16%);
+	--button-contrast: hsl(241, 10%, 96%);
+	--button-contrast-hover: hsl(241, 10%, 90%);
+
+	--separator: hsl(241, 10%, 28%);
+	--separator-alpha: hsl(241, 80%, 88%, 19%);
+
+	--text-primary: hsl(241, 19%, 94%);
+	--text-secondary: hsl(241, 10%, 64%);
+	--text-contrast: hsl(0, 0%, 100%);
+	--text-contrast-themed: hsl(241, 10%, 10%);
+}
+
+:root {
 	font-family: $ui-font-secondary, $MTSUltraExpanded, $MTSExpanded, $MTSWide,
 		-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue',
 		Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
@@ -10,8 +56,8 @@
 	font-weight: normal;
 	line-height: 1.4rem;
 
-	background-color: $Background;
-	color: $TextPrimary;
+	background: var(--background);
+	color: var(--text-primary);
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -45,7 +91,7 @@ body {
 
 *::selection {
 	background-color: $AccentBlue;
-	color: $TextContrast;
+	color: var(--text-contrast);
 }
 
 #root {
@@ -67,11 +113,7 @@ nav {
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background-color: darken($Background, 12%);
+		background-color: var(--separator);
 		border-radius: $ui-rounded--8;
-	}
-
-	&::-webkit-scrollbar-thumb:hover {
-		background-color: darken($Background, 24%);
 	}
 }
