--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -5,7 +5,7 @@
 
 	margin-top: auto;
 	padding: $ui-step * 12;
-	color: $TextSecondary;
+	color: var(--text-secondary);
 
 	.wrapper {
 		@include ui-container;
