--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -13,9 +13,9 @@
 
 		overflow: hidden;
 		border-radius: $ui-rounded--24;
-		background: $HeaderAlpha;
+		background: var(--header-alpha);
 		backdrop-filter: blur(32px);
-		box-shadow: inset 0 0 0 1px $Separator;
+		box-shadow: inset 0 0 0 1px var(--separator);
 		padding: 0 clamp($ui-step * 5, 3vmax, $ui-step * 9);
 		gap: $ui-spacing;
 
