--- a/src/components/ui/blocks/Button/Button.module.scss
+++ b/src/components/ui/blocks/Button/Button.module.scss
@@ -2,6 +2,7 @@
 
 .root {
 	@include ui-size-control(fit-content);
+	@include ui-flex-container($shrink: 0);
 
 	position: relative;
 	overflow: hidden;
