--- a/src/components/ui/blocks/Section/Section.module.scss
+++ b/src/components/ui/blocks/Section/Section.module.scss
@@ -1,31 +1,29 @@
 @import 'assets/styles/variables';
 
-@include ui-width-columns(false);
+@include ui-width-columns;
 
 .root {
-	// @include ui-size-control(100%, $maxW: 1180px);
+	margin: 0 $ui-outer-margin;
 
-	margin: 0 auto;
+	.inner {
+		@include ui-size-control(100%);
+
+		margin: 0 auto;
+
+		.content {
+			@include ui-flex-container(flex, $flow: column);
+
+			gap: $ui-spacing;
+		}
+	}
 }
 
 .field {
-	padding: clamp($ui-step * 3, 3vmax, $ui-step * 9)
-		clamp($ui-step * 5, 3vmax, $ui-step * 12);
+	padding-top: $ui-inner-padding;
+	padding-bottom: $ui-inner-padding;
+
 	background-color: var(--field-background);
 	border-radius: clamp($ui-rounded--24, 3vmax, $ui-rounded--36);
 	box-shadow: inset 0 0 0 1px var(--separator);
 	overflow: hidden;
-
-	margin: 0 $ui-outer-padding;
-}
-
-.inner {
-	@include ui-size-control(100%);
-	@include ui-flex-container(flex, $flow: column);
-
-	gap: $ui-spacing;
-}
-
-.padding {
-	padding: 0 $ui-spacing;
 }
