--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -6,7 +6,7 @@
 	min-height: 100dvh;
 	box-sizing: border-box;
 
-	gap: $ui-step * 12;
+	gap: clamp($ui-step * 5, 3vmax, $ui-step * 12);
 }
 
 .main {
