--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -65,6 +65,8 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+
+	transition: all 0.08s ease-in;
 }
 
 html {
@@ -101,13 +103,7 @@ body {
 
 body,
 div,
-nav,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+nav {
 	&::-webkit-scrollbar {
 		width: 4px;
 		height: 4px;
