--- a/src/components/ui/navigation/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/ui/navigation/Breadcrumbs/Breadcrumbs.module.scss
@@ -14,7 +14,7 @@
 
 			@include ui-absolute-center;
 			@include ui-size-control(
-				calc(100% + $ui-step * 4),
+				calc(100% + $ui-step * 3),
 				calc(100% + $ui-step)
 			);
 
@@ -27,5 +27,9 @@
 				background: var(--button-secondary);
 			}
 		}
+	}
+
+	.separator {
+		user-select: none;
 	}
 }
