--- a/src/components/ui/blocks/Button/Button.module.scss
+++ b/src/components/ui/blocks/Button/Button.module.scss
@@ -32,8 +32,8 @@
 		scale: 0.992;
 	}
 
-	&:focus-within {
-		outline: 4px solid var(--button-secondary);
+	&:focus-visible {
+		outline: 3px solid var(--button-secondary);
 	}
 }
 
@@ -220,7 +220,7 @@
 
 // corners
 
-.corners-pill {
+.rounded {
 	border-radius: $ui-rounded--64;
 }
 
