feature: add services

--- a/src/components/ui/blocks/ButtonIcon/ButtonIcon.module.scss
+++ b/src/components/ui/blocks/ButtonIcon/ButtonIcon.module.scss
@@ -223,8 +223,12 @@
 	}
 }
 
-.none-action {
+.disabled-link {
 	opacity: $Alpha64;
 	pointer-events: none;
 	filter: blur(2px);
+}
+
+.none-action {
+	pointer-events: none;
 }
