--- a/src/components/ui/blocks/Button/Button.module.scss
+++ b/src/components/ui/blocks/Button/Button.module.scss
@@ -25,6 +25,9 @@
 		.content {
 			padding: 0 $ui-step;
 			box-sizing: border-box;
+
+			font-family: $ui-font-secondary;
+			font-weight: normal;
 		}
 	}
 
@@ -187,7 +190,14 @@
 
 // size
 
-@mixin ui-size-button($height, $padding, $rounded, $gap) {
+@mixin ui-size-button(
+	$height,
+	$padding,
+	$rounded,
+	$gap,
+	$font-size,
+	$line-height
+) {
 	@include ui-size-control($H: $ui-step * $height);
 
 	border-radius: $rounded;
@@ -195,27 +205,32 @@
 	.in {
 		padding: 0 $ui-step * $padding;
 		gap: $ui-step * $gap;
+
+		.content {
+			font-size: $font-size;
+			line-height: $line-height;
+		}
 	}
 }
 
 .size-xsm {
-	@include ui-size-button(7, 2, $ui-rounded--8, 0.5);
+	@include ui-size-button(7, 2, $ui-rounded--8, 0.5, 13px, 1.3847em);
 }
 
 .size-sm {
-	@include ui-size-button(11, 3, $ui-rounded--12, 1);
+	@include ui-size-button(11, 3, $ui-rounded--12, 1, 15px, 1.333334em);
 }
 
 .size-md {
-	@include ui-size-button(14, 4, $ui-rounded--16, 1.5);
+	@include ui-size-button(14, 4, $ui-rounded--16, 1.5, 17px, 1.4118em);
 }
 
 .size-lg {
-	@include ui-size-button(16, 5, $ui-rounded--16, 2);
+	@include ui-size-button(16, 5, $ui-rounded--16, 2, 20px, 1.4em);
 }
 
 .size-xlg {
-	@include ui-size-button(18, 6, $ui-rounded--20, 3);
+	@include ui-size-button(18, 6, $ui-rounded--20, 3, 24px, 1.333334em);
 }
 
 // corners
