--- a/src/assets/styles/_Mixins.scss
+++ b/src/assets/styles/_Mixins.scss
@@ -3,10 +3,10 @@
 @mixin ui-max-width($count: 12) {
 	max-width: calc(
 		$ui-column-width * $count + $ui-spacing * ($count - 1) + $ui-inner-padding *
-			2
+			2 + $ui-outer-padding * 2
 	);
 
-	padding: 0 $ui-inner-padding;
+	// padding: 0 $ui-inner-padding;
 }
 
 @mixin ui-container($count: 12) {
