--- a/src/assets/styles/_Variables.scss
+++ b/src/assets/styles/_Variables.scss
@@ -6,7 +6,8 @@ $ui-step: 4px;
 $ui-spacing: $ui-step * 5;
 $ui-column-width: 72px;
 
-$ui-inner-padding: clamp($ui-step * 6, 5.2vw, $ui-step * 12);
+$ui-inner-padding: clamp($ui-step * 4, 5.2vw, $ui-step * 9);
+$ui-outer-padding: clamp($ui-step * 2, 1.2vw, $ui-step * 3);
 $ui-sm-gap: clamp($ui-step * 2, 1.2vw, $ui-spacing);
 $ui-outer-margin: $ui-step * 2;
 
