--- a/src/components/ui/blocks/Section/Section.module.scss
+++ b/src/components/ui/blocks/Section/Section.module.scss
@@ -7,23 +7,53 @@
 
 	.inner {
 		@include ui-size-control(100%);
+		@include ui-flex-container(flex, $flow: column);
 
 		margin: 0 auto;
+		gap: $ui-outer-padding;
 
 		.content {
 			@include ui-flex-container(flex, $flow: column);
 
 			gap: $ui-spacing;
+			color: var(--text-primary);
 		}
 	}
 }
 
-.field {
-	padding-top: clamp($ui-step * 5, 3vmax, $ui-step * 9);
-	padding-bottom: clamp($ui-step * 5, 3vmax, $ui-step * 9);
+.outer-x-padding {
+	padding-left: $ui-outer-padding;
+	padding-right: $ui-outer-padding;
+}
 
+.outer-y-padding {
+	padding-top: $ui-outer-padding;
+	padding-bottom: $ui-outer-padding;
+}
+
+.inner-x-padding {
+	padding: 0 $ui-inner-padding;
+}
+
+.inner-y-padding {
+	padding-top: clamp($ui-step * 2, 3vmax, $ui-step * 6);
+	padding-bottom: clamp($ui-step * 2, 3vmax, $ui-step * 6);
+}
+
+.field {
 	background-color: var(--field-background);
 	border-radius: clamp($ui-rounded--24, 3vmax, $ui-rounded--36);
-	box-shadow: inset 0 0 0 1px var(--separator);
 	overflow: hidden;
+	position: relative;
+
+	&::after {
+		content: '';
+
+		@include ui-size-control(100%, 100%);
+		@include ui-absolute-center;
+
+		box-shadow: inset 0 0 0 1px var(--separator);
+		border-radius: clamp($ui-rounded--24, 3vmax, $ui-rounded--36);
+		pointer-events: none;
+	}
 }
