refactor: update HardSkills component & page content

--- a/src/components/shared/PortfolioItem/PortfolioItem.module.scss
+++ b/src/components/shared/PortfolioItem/PortfolioItem.module.scss
@@ -13,6 +13,8 @@
 		background: var(--background-alpha);
 		border-radius: inherit;
 
+		aspect-ratio: 133 / 64;
+
 		// img {
 		// 	@include ui-size-control(100%, 100%);
 		// }
