--- a/src/components/ui/blocks/Section/Section.module.scss
+++ b/src/components/ui/blocks/Section/Section.module.scss
@@ -13,7 +13,7 @@
 		.content {
 			@include ui-flex-container(flex, $flow: column);
 
-			gap: $ui-sm-gap;
+			gap: $ui-spacing;
 			color: var(--text-primary);
 		}
 	}
