--- a/src/views/Experience/Experience.module.scss
+++ b/src/views/Experience/Experience.module.scss
@@ -1,8 +1,10 @@
 @import 'assets/styles/variables';
 
 .preview {
-	@include ui-size-control(100%);
+	@include ui-size-control(100%, $minH: 200px);
 	@include ui-flex-container(flex, center, center);
+
+	color: var(--text-secondary);
 
 	img {
 		@include ui-size-control(100%, $minW: 640px);
