--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -15,7 +15,7 @@
 	@include ui-display-grid(1fr auto auto);
 
 	gap: $ui-spacing;
-	padding: 0 calc($ui-inner-padding + $ui-outer-padding);
+	padding: 0 calc($ui-outer-padding + $ui-inner-padding);
 
 	.spinner {
 		@include ui-flex-container(flex);
