--- a/src/components/ui/blocks/Box/Box.module.scss
+++ b/src/components/ui/blocks/Box/Box.module.scss
@@ -1,4 +1,4 @@
-@import 'assets/styles/variables';
+@import 'assets/styles/Variables';
 
 .root {
 	@include ui-size-control(100%);
@@ -10,21 +10,6 @@
 	padding-left: calc($ui-outer-padding + $ui-inner-padding);
 	padding-right: calc($ui-outer-padding + $ui-inner-padding);
 }
-
-// .x-padding-sm {
-// 	padding-left: clamp($ui-step * 3, 1.86vw, $ui-step * 6);
-// 	padding-right: clamp($ui-step * 3, 1.86vw, $ui-step * 6);
-// }
-
-// .x-padding-lg {
-// 	padding-left: $ui-inner-padding;
-// 	padding-right: $ui-inner-padding;
-// }
-
-// .y-padding-sm {
-// 	padding-top: clamp($ui-step * 2, 1.2vmax, $ui-step * 6);
-// 	padding-bottom: clamp($ui-step * 2, 1.2vmax, $ui-step * 6);
-// }
 
 .y-padding {
 	padding-top: clamp(
