--- a/src/components/ui/navigation/PageNavigation/PageNavigation.module.scss
+++ b/src/components/ui/navigation/PageNavigation/PageNavigation.module.scss
@@ -1,4 +1,4 @@
-@import 'assets/styles/variables';
+@import 'assets/styles/Variables';
 
 .root {
 	@include ui-display-grid($ui-column-width 1fr 1fr $ui-column-width);
