refactor: update all

--- a/src/assets/styles/_Colors.scss
+++ b/src/assets/styles/_Colors.scss
@@ -7,6 +7,7 @@ $Telegram: hsl(201 85% 55%);
 $GitHub: hsl(260 56% 52%);
 $GitLab: hsl(20 97% 57%);
 $Yandex: hsl(9 97% 55%);
+$HeadHunter: hsl(353 99% 44%);
 
 // Palette ———————————————————————————————————————————————— //
 
