--- a/src/components/shared/ExperienceItem/ExperienceItem.module.scss
+++ b/src/components/shared/ExperienceItem/ExperienceItem.module.scss
@@ -43,3 +43,10 @@
 		@include ui-size-control(100%, $minW: 532px);
 	}
 }
+
+.link {
+	@include ui-absolute-center;
+	@include ui-size-control(100%, 100%);
+
+	border-radius: inherit;
+}
