--- a/src/components/ui/navigation/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/ui/navigation/Breadcrumbs/Breadcrumbs.module.scss
@@ -1,12 +1,14 @@
 @import 'assets/styles/Variables';
 
 .root {
-	@include ui-flex-container(flex, $wrap: wrap);
+	@include ui-flex-container(flex, $items: center, $wrap: wrap);
 
 	gap: $ui-step * 3;
 	row-gap: $ui-step;
 
 	.link {
+		@include ui-flex-container(flex);
+
 		position: relative;
 
 		&::after {
