--- a/src/components/ui/typography/Fontbody/Fontbody.module.scss
+++ b/src/components/ui/typography/Fontbody/Fontbody.module.scss
@@ -5,16 +5,16 @@
 .level-1 {
 	font-family: $ui-font-secondary;
 	font-weight: normal;
-	font-size: 24px;
+	font-size: clamp($ui-step * 5, 4.4vmin, $ui-step * 6);
 	line-height: 1.333334em;
 }
 
 .level-2 {
-	font-size: 20px;
+	font-size: clamp(17px, 3.6vmin, $ui-step * 5);
 	line-height: 1.4em;
 }
 
 .level-3 {
-	font-size: 17px;
+	font-size: clamp(15px, 3.2vmin, 17px);
 	line-height: 1.4118em;
 }
